Delivery Release 1.8.0